# RayTracing

./: CMakeLists.txt  README.md  compileRun.ps1  main.cpp
include/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rtweekend.h  shader.h  sphere.h  vec3.h
include/glad/: CMakeLists.txt
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
shaders/: shader.fs  shader.vs
